Update argocd manifests

--- a/.argocd/metricsServerApplication.yaml
+++ b/.argocd/metricsServerApplication.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: root-bootstrap
+  name: metrics-server
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -10,11 +10,21 @@ spec:
   source:
     repoURL: https://github.com/ModerNews/homelab-helm.git
     targetRevision: HEAD
-    path: .argocd
+    path: metrics-server
+    helm:
+      releaseName: metrics-server
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: kube-system
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+    retry:
+      limit: 3
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
+    syncOptions:
+      - CreateNamespace=true
