--- a/.argocd/argocdApplication.yaml
+++ b/.argocd/argocdApplication.yaml
@@ -1,8 +1,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: root-bootstrap
+  name: argocd
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "100"
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
@@ -10,7 +12,11 @@ spec:
   source:
     repoURL: https://github.com/ModerNews/homelab-helm.git
     targetRevision: HEAD
-    path: .argocd
+    path: ArgoCD
+    helm:
+      releaseName: argocd
+      valueFiles:
+        - values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
@@ -18,3 +24,13 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    retry:
+      limit: 3
+      backoff:
+        duration: 5s
+        factor: 2
+        maxDuration: 3m
+    syncOptions:
+      - CreateNamespace=true
+      - RespectIgnoreDifferences=true
+      - ServerSideApply=true
